fixed dom create element, fixed tabbar z-index

--- a/src/App/SitePart/Header/Header.modules.scss
+++ b/src/App/SitePart/Header/Header.modules.scss
@@ -14,6 +14,11 @@
     flex-direction: column;
   }
 
+  &__tabbar {
+    position: relative;
+    z-index: 1;
+  }
+
   &__container {
     &-logotype {
       margin-bottom: 30px;
@@ -24,6 +29,7 @@
       display: flex;
       justify-content: space-between;
       position: absolute;
+      z-index: 0;
       padding: 0 56px;
       transform: translateY(-100%);
       top: 40%;
